@@ -1,0 +1,1 @@
+./test/relaxng/compare0.rng validates
